Prevent leaves from overlapping the linktree

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,18 @@ body{
   font-family: 'Roboto', sans-serif;
 }
 
+#background-container{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100;
+  height: 100;
+  z-index: -1;
+}
+
 .container{
   width: 50%;
+  background-color: #FEFAE0;
 }
 
 #bio-container{
